fix(request): resolve variable interpolation issue for requests